@@ -1,5 +1,5 @@
 
-package no.priv.garshol.duke;
+package no.priv.garshol.duke.databases;
 
 import java.util.Map;
 import java.util.HashMap;
@@ -8,6 +8,11 @@ import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+
+import no.priv.garshol.duke.Record;
+import no.priv.garshol.duke.Property;
+import no.priv.garshol.duke.Database;
+import no.priv.garshol.duke.Configuration;
 import no.priv.garshol.duke.utils.StringUtils;
 
 /**
