@@ -3,7 +3,7 @@ package no.priv.garshol.duke.test;
 
 import no.priv.garshol.duke.Database;
 import no.priv.garshol.duke.Configuration;
-import no.priv.garshol.duke.KeyValueDatabase;
+import no.priv.garshol.duke.databases.KeyValueDatabase;
 
 public class KeyValueDatabaseTest extends DatabaseTest {
 
